--- a/FoodCollector/FCActivityCenterTVSectionHeader.xib
+++ b/FoodCollector/FCActivityCenterTVSectionHeader.xib
@@ -16,7 +16,7 @@
                     <color key="backgroundColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
+                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoPhoto-Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
                     <rect key="frame" x="532" y="15" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Dhy-re-rOY"/>
@@ -54,4 +54,7 @@
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="NoPhoto-Placeholder" width="88" height="88"/>
+    </resources>
 </document>
