--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -2070,6 +2070,7 @@
                     <connections>
                         <segue destination="akw-hV-T1a" kind="relationship" relationship="viewControllers" id="yEb-7L-jvr"/>
                         <segue destination="swm-m4-wSU" kind="relationship" relationship="viewControllers" id="Xh6-a6-sJp"/>
+                        <segue destination="eQz-g4-Jns" kind="relationship" relationship="viewControllers" id="J4r-h1-HXj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FdR-bd-eEU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2554,6 +2555,99 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="415-Dj-rgd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4362" y="-434"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="zuw-Kv-wxY">
+            <objects>
+                <viewController title="About" id="eQz-g4-Jns" customClass="AboutVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DrB-b8-YyN"/>
+                        <viewControllerLayoutGuide type="bottom" id="hNT-I1-upI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="center" id="6ON-sk-1Ub">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOODONET" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="045-DL-8ac">
+                                <rect key="frame" x="205" y="53" width="188" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="G9P-a4-Ivl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFn-Gx-Xxb" userLabel="Container">
+                                <rect key="frame" x="175" y="145" width="251" height="126"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rKp-0f-acV">
+                                        <rect key="frame" x="13" y="8" width="150" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="KRV-14-tA8"/>
+                                            <constraint firstAttribute="width" constant="150" id="Nex-mb-WlJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1111" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAw-2m-dNE">
+                                        <rect key="frame" x="160" y="8" width="75" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="5RR-aA-QUK"/>
+                                            <constraint firstAttribute="width" constant="75" id="EBz-9P-w4B"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Build" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0i-6h-JMO">
+                                        <rect key="frame" x="13" y="52" width="150" height="45"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1111" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOt-CZ-JFf">
+                                        <rect key="frame" x="160" y="52" width="75" height="45"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="126" id="GWR-Z6-Sqo"/>
+                                    <constraint firstItem="rKp-0f-acV" firstAttribute="top" secondItem="UAw-2m-dNE" secondAttribute="top" id="JbI-Bz-eBU"/>
+                                    <constraint firstItem="UAw-2m-dNE" firstAttribute="leading" secondItem="rKp-0f-acV" secondAttribute="trailing" constant="-3" id="OJ0-N2-fsK"/>
+                                    <constraint firstItem="rKp-0f-acV" firstAttribute="leading" secondItem="qFn-Gx-Xxb" secondAttribute="leading" constant="13" id="k4B-wJ-L9y"/>
+                                    <constraint firstAttribute="width" constant="251" id="sir-zy-B9d"/>
+                                    <constraint firstItem="rKp-0f-acV" firstAttribute="top" secondItem="qFn-Gx-Xxb" secondAttribute="top" constant="8" id="uzq-Vu-RDB"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="045-DL-8ac" firstAttribute="top" secondItem="DrB-b8-YyN" secondAttribute="bottom" constant="33" id="JtY-fe-ccC"/>
+                            <constraint firstAttribute="centerX" secondItem="045-DL-8ac" secondAttribute="centerX" constant="1" id="OKf-t9-rw1"/>
+                            <constraint firstAttribute="centerX" secondItem="qFn-Gx-Xxb" secondAttribute="centerX" id="ZNX-3V-mLX"/>
+                            <constraint firstItem="045-DL-8ac" firstAttribute="leading" secondItem="6ON-sk-1Ub" secondAttribute="leading" constant="205" id="gcM-Xi-qlC"/>
+                            <constraint firstItem="qFn-Gx-Xxb" firstAttribute="top" secondItem="045-DL-8ac" secondAttribute="bottom" constant="30" id="qlK-S6-EoS"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="gcM-Xi-qlC"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="About" id="FIq-wO-Qb8"/>
+                    <navigationItem key="navigationItem" id="hh8-uP-X3Q"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="aboutView" destination="6ON-sk-1Ub" id="bY6-92-4BL"/>
+                        <outlet property="lblBuild" destination="UOt-CZ-JFf" id="mnB-EB-6am"/>
+                        <outlet property="lblVersion" destination="UAw-2m-dNE" id="quF-ZR-T61"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0iT-aa-mbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="295" y="1036"/>
         </scene>
     </scenes>
     <resources>
